# news-summarizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scraper.py
templates/: index.html
