[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
